--- a/docker/emu/Dockerfile
+++ b/docker/emu/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /opt/android-sdk-linux
 
 RUN apt-get update -y
 
-RUN echo "no" | avdmanager create avd -n bot --abi google_apis/x86_64 -k "system-images;android-28;google_apis;x86_64"
+RUN echo "no" | avdmanager create avd -n bot --abi google_apis/x86_64 -k "system-images;android-28;google_apis;x86_64" \
+    && echo 'hw.keyboard=yes' >> /opt/android-sdk-linux/.android/avd/bot.avd/config.ini
 
 COPY . .
 
-RUN chmod -x docker-entrypoint.sh
+RUN chmod +x /opt/android-sdk-linux/docker-entrypoint.sh
 
-ENTRYPOINT ["bash", "docker-entrypoint.sh"]
+CMD /opt/android-sdk-linux/docker-entrypoint.sh
